<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/exitButton"
        android:layout_width="205dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/mybutton2"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/exitAppButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highscoreButton"
        tools:text="@string/exitAppButton" />

    <Button
        android:id="@+id/highscoreButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/mybutton3"
        android:fontFamily="monospace"
        android:text="@string/highscoreButton"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/exitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        tools:text="@string/highscoreButton" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/mybutton"
        android:fontFamily="monospace"
        android:text="@string/startButton"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/highscoreButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:text="@string/startButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="33dp"
        android:contentDescription="Title"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hangmandeluxe" />

</android.support.constraint.ConstraintLayout>